--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,13 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    env_file:
+      - resume/docker.env
     ports:
-     - "0.0.0.0:8000:8000"
+      - "8000:8000"
     command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - static-data:/path/to/static/data
 
 volumes:
   static-data:
