--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.10"
 services:
   app:
     build:
@@ -6,11 +6,11 @@ services:
       dockerfile: Dockerfile
     env_file:
       - resume/docker.env
-    ports:
-      - "8000:8000"
-    command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - static-data:/path/to/static/data
+      - .:/srv/app
+    ports:
+      - "0.0.0.0:8000:8000"
+    command: python manage.py runserver 0.0.0.0:8000
 
 volumes:
   static-data:
